# tsumugi

./: README.md  package-lock.json  package.json
mcp-server/: tsumugi_mcp.py
src/: home.ts  main.ts  pdf-export.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  history.rs  lib.rs  pdf.rs  stable_hash.rs  watcher.rs
src/editor/: editor-controller.ts
src/styles/: home.css
