[package]
name = "tsumugi"
version = "0.3.65"
edition = "2021"

[lib]
name = "tsumugi_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "tsumugi"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
notify = "6"
notify-debouncer-mini = "0.4"
sys-locale = "0.3"
dirs = "5"
tiny_http = "0.12"
getrandom = "0.2"
dunce = "1"
tauri-plugin-shell = "2"
diff-match-patch-rs = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
raw-window-handle = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
